// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExitFullScreenButton /> with kibana services is rendered 1`] = `
<ExitFullScreenButtonKibanaProvider
  coreStart={
    Object {
      "chrome": Object {
        "setIsVisible": [MockFunction] {
          "calls": Array [
            Array [
              false,
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
      },
    }
  }
>
  <ExitFullScreenButton
    onExit={[MockFunction]}
  >
    <ExitFullScreenButton
      css={
        Object {
          "map": undefined,
          "name": "knjqgf",
          "next": undefined,
          "styles": "
    bottom: 8px;
    left: 8px;
    position: fixed;
    z-index: 5;
  ",
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div>
        <EuiScreenReaderOnly>
          <p
            aria-live="polite"
            className="euiScreenReaderOnly"
          >
            In full screen mode, press ESC to exit.
          </p>
        </EuiScreenReaderOnly>
        <button
          className="exitFullScreenButton"
          data-test-subj="exitFullScreenModeButton"
          onClick={[Function]}
        >
          <EuiFlexGroup
            alignItems="center"
            component="span"
            gutterSize="s"
            responsive={false}
          >
            <span
              className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <EuiFlexItem
                component="span"
                grow={false}
              >
                <span
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <EuiIcon
                    size="m"
                    type="logoElastic"
                  >
                    <span
                      data-euiicon-type="logoElastic"
                      size="m"
                    />
                  </EuiIcon>
                </span>
              </EuiFlexItem>
              <EuiFlexItem
                component="span"
                data-test-subj="exitFullScreenModeText"
                grow={false}
              >
                <span
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                  data-test-subj="exitFullScreenModeText"
                >
                  Exit full screen
                </span>
              </EuiFlexItem>
              <EuiFlexItem
                component="span"
                grow={false}
              >
                <span
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <EuiIcon
                    size="s"
                    type="fullScreenExit"
                  >
                    <span
                      data-euiicon-type="fullScreenExit"
                      size="s"
                    />
                  </EuiIcon>
                </span>
              </EuiFlexItem>
            </span>
          </EuiFlexGroup>
        </button>
      </div>
    </ExitFullScreenButton>
  </ExitFullScreenButton>
</ExitFullScreenButtonKibanaProvider>
`;

exports[`<ExitFullScreenButton /> with manual services is rendered 1`] = `
<ExitFullScreenButtonProvider
  setIsFullscreen={
    [MockFunction] {
      "calls": Array [
        Array [
          false,
        ],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
>
  <ExitFullScreenButton
    onExit={[MockFunction]}
  >
    <ExitFullScreenButton
      css={
        Object {
          "map": undefined,
          "name": "knjqgf",
          "next": undefined,
          "styles": "
    bottom: 8px;
    left: 8px;
    position: fixed;
    z-index: 5;
  ",
          "toString": [Function],
        }
      }
      onClick={[Function]}
    >
      <div>
        <EuiScreenReaderOnly>
          <p
            aria-live="polite"
            className="euiScreenReaderOnly"
          >
            In full screen mode, press ESC to exit.
          </p>
        </EuiScreenReaderOnly>
        <button
          className="exitFullScreenButton"
          data-test-subj="exitFullScreenModeButton"
          onClick={[Function]}
        >
          <EuiFlexGroup
            alignItems="center"
            component="span"
            gutterSize="s"
            responsive={false}
          >
            <span
              className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow"
            >
              <EuiFlexItem
                component="span"
                grow={false}
              >
                <span
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <EuiIcon
                    size="m"
                    type="logoElastic"
                  >
                    <span
                      data-euiicon-type="logoElastic"
                      size="m"
                    />
                  </EuiIcon>
                </span>
              </EuiFlexItem>
              <EuiFlexItem
                component="span"
                data-test-subj="exitFullScreenModeText"
                grow={false}
              >
                <span
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                  data-test-subj="exitFullScreenModeText"
                >
                  Exit full screen
                </span>
              </EuiFlexItem>
              <EuiFlexItem
                component="span"
                grow={false}
              >
                <span
                  className="euiFlexItem euiFlexItem--flexGrowZero"
                >
                  <EuiIcon
                    size="s"
                    type="fullScreenExit"
                  >
                    <span
                      data-euiicon-type="fullScreenExit"
                      size="s"
                    />
                  </EuiIcon>
                </span>
              </EuiFlexItem>
            </span>
          </EuiFlexGroup>
        </button>
      </div>
    </ExitFullScreenButton>
  </ExitFullScreenButton>
</ExitFullScreenButtonProvider>
`;
